# maxdiff_agents

./: .env.example  .gitignore  README.md  check_gitignore.sh  fruits.txt  max_diff.py  requirements.txt  run.py  run_tests.py  sample_items.txt  sample_personas.txt  setup.cfg
ground_truth_maxdiff_comparison/: report.html
ground_truth_maxdiff_comparison/R_code/: MaxDiff_Human_vs_LLM.Rmd  MaxDiff_Human_vs_LLM_model_splits.Rmd
ground_truth_maxdiff_comparison/items+personas/: UXR_personas.txt  quantux_classes.txt
ground_truth_maxdiff_comparison/maxdiff_data/: maxdiff_item_results.csv  maxdiff_runs.csv  maxdiff_settings.csv
ground_truth_maxdiff_comparison/persona_clustering/: README.md  persona_clustering.py  requirements.txt
src/: __init__.py  logging_utils.py  main.py  maxdiff_engine.py  model_clients.py  reporting.py  types.py
tests/: README.md  __init__.py  conftest.py  requirements.txt  test_logging_utils.py  test_maxdiff_engine.py  test_model_clients.py  test_personas.py  test_reporting.py  test_types.py
