[metadata]
name = maxdiff_agents
version = 1.0.0
author = Your Name
author_email = your.email@example.com
description = A Python project to evaluate MaxDiff tasks using Frontier AI models (OpenAI, Anthropic, Google).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/maxdiff_agents
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires = 
    openai>=1.12.0
    anthropic>=0.18.0
    google-generativeai>=0.4.0
    python-dotenv>=1.0.0
    asyncio>=3.4.3
    aiohttp>=3.9.0
    pydantic>=2.5.0
    numpy>=1.24.0
    pandas>=2.0.0
    rich>=13.0.0
    click>=8.1.0
    jinja2>=3.1.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    maxdiff_agents = src.main:main

